applications/workloads/website/deployment.yml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: website
  namespace: website

spec:
  replicas: 3

  selector:
    matchLabels:
      app.kubernetes.io/name: website

  template:
    metadata:
      labels:
        app.kubernetes.io/name: website

    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: website

      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: nginx
          image: rs235/website:latest

          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: tmp
              mountPath: /tmp

          ports:
            - name: http
              containerPort: 8080

      volumes:
        - name: tmp
          emptyDir: {}
