applications/workloads/website/service.yml
---
apiVersion: v1
kind: Service

metadata:
  name: website

spec:
  selector:
    app.kubernetes.io/name: website

  type: LoadBalancer

  externalTrafficPolicy: Local

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
