applications/workloads/website/policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: website
  namespace: website

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: website

  policyTypes:
    - Ingress

  ingress:
    - from:
        - ipBlock:
            cidr: 10.10.10.52/32
      ports:
        - protocol: TCP
          port: 8080
